--- a/css/style.css
+++ b/css/style.css
@@ -27,15 +27,18 @@ body {
 h1, h2 {
   font-family: 'Gabriela', serif;
   color: #fff;
+  text-shadow: 2px 2px 2px black;
 }
 
 h1 {
   font-size: 3.5em;
+  text-shadow: 2px 2px 2px black;
   margin-bottom: 0;
 }
 
 h2 {
   font-size: 1.5em;
+  text-shadow: 2px 2px 2px black;
   margin-top: .5em;
 }
 
@@ -43,6 +46,7 @@ h3 {
   font-family: 'Gabriela', serif;
   font-size: 1.5em;
   margin-top: .5em;
+  text-shadow: 2px 2px 2px black;
 }
 
 img {
@@ -52,12 +56,14 @@ img {
 }
 
 p {
+  color: white;
+  text-shadow: 2px 2px 2px black;
   font-size: 1em;
 }
 
 a {
-  color: black;
-  text-decoration: none;
+  color: white;
+  text-shadow: 1px 1px 1px black;
 }
 
 a:hover {
